--- a/force-app/main/default/classes/PurchaseOrderGenertion.cls
+++ b/force-app/main/default/classes/PurchaseOrderGenertion.cls
@@ -1621,6 +1621,8 @@ public class PurchaseOrderGenertion {
                     OrderLst.add(objOrder);
                 }
             }
+            system.debug('list of orders'+OrderLst);            
+            OrderLst =  new list<order__c>(new set<order__c>(OrderLst));
             insert OrderLst;
             
             List<Order_Line_Item__c> orderLineItemLst=new List<Order_Line_Item__c>{};
