--- a/force-app/main/default/classes/sendNPSDataController.cls
+++ b/force-app/main/default/classes/sendNPSDataController.cls
@@ -8,7 +8,7 @@ public class sendNPSDataController {
         if(npsId!=null)
         {
            npsList = [Select id,Appointment__c,Appointment__r.name,job__C,job__r.name,HSA_Payroll__c,Mechanical_Engineer_1_Pay_Number__c,Mechanical_Engineer_2_Pay_Number__c,Product_Interest__c,
-                      Step1_Score_Dup__c,Step2_Score__c,Step1_Comments__c,createddate,source__c,CHI_Lead_Number__c,opportunity__c from NPS__c where id=:npsId];
+                      Step1_Score_Dup__c,Step2_Score__c,Step1_Comments__c,createddate,source__c,CHI_Lead_Number__c,opportunity__c,Integration_Status__c from NPS__c where id=:npsId];
         }
 
     }
@@ -19,14 +19,21 @@ public class sendNPSDataController {
         List<NPS__c> npsListToUpdate = new List<NPS__c>();
         if(!npsList.isEmpty())
         {
-             if(npsList[0].source__c=='Sales Appointment')
-             {
-                 npsListToUpdate.addAll(batch.processReqHSA(npsList));
-             }
-             else if(npsList[0].source__c=='Job Installation')
-             {
-                npsListToUpdate.addAll(batch.processReqInstaller(npsList));
-             }
+            if(npsList[0].Integration_Status__c!='Ready to be Sent')
+            {
+                 ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.ERROR, 'This NPS is not eligible to send.'));   
+                 return;
+            }
+            else{
+                 if(npsList[0].source__c=='Sales Appointment')
+                 {
+                     npsListToUpdate.addAll(batch.processReqHSA(npsList));
+                 }
+                 else if(npsList[0].source__c=='Job Installation')
+                 {
+                    npsListToUpdate.addAll(batch.processReqInstaller(npsList));
+                 }
+            }
         }
         
         if(!npsListToUpdate.isEmpty())
